set(CMAKE_LEGACY_CYGWIN_WIN32 0)

PROJECT(DesignPatterns CXX)

if(UNIX)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")
endif()

ADD_EXECUTABLE(abstractfactory AbstractFactory.cpp)
ADD_EXECUTABLE(callback CallBack.cpp)
ADD_EXECUTABLE(constructors Constructors.cpp)
ADD_EXECUTABLE(factory Factory.cpp)
#ADD_EXECUTABLE(functor functor.cpp)
ADD_EXECUTABLE(multipleinheritence MultipleInheritence.cpp)
ADD_EXECUTABLE(observer Observer.cpp)
ADD_EXECUTABLE(singleton Singleton.cpp)
#ADD_EXECUTABLE(specificfunctor SpecificFunctor.cpp)
ADD_EXECUTABLE(static Static.cpp)
ADD_EXECUTABLE(template Template.cpp)
ADD_EXECUTABLE(prototype ProtoType.cpp)
ADD_EXECUTABLE(templatemethod TemplateMethod.cpp)
ADD_EXECUTABLE(bridge Bridge.cpp)
ADD_EXECUTABLE(composite Composite.cpp)
ADD_EXECUTABLE(decorator Decorator.cpp)
ADD_EXECUTABLE(facade Facade.cpp)
ADD_EXECUTABLE(Command Command.cpp)
ADD_EXECUTABLE(state State.cpp)
ADD_EXECUTABLE(strategy Strategy.cpp)
ADD_EXECUTABLE(visitor Visitor.cpp)
